# dataplotlib

./: .travis.yml  Cargo.toml  README.md
examples/: coloredxy.rs  example.rs  simplexy.rs
src/: draw.rs  draw_image.rs  draw_sdl.rs  lib.rs  plot.rs  plotbuilder.rs  plotter.rs  util.rs
