[package]
authors = ["Josh Leverette <coder543@gmail.com>"]
description = "dataplotlib is a(n early stage) hassle-free library for plotting data"
documentation = "https://docs.rs/dataplotlib/"
keywords = ["plotting", "graphing", "matplotlib", "scientific"]
license = "MIT"
name = "dataplotlib"
version = "0.1.3"

[features]
default = ["use-sdl2"]
use-sdl2 = ["sdl2_mt"]
use-image = ["image"]

[dependencies]

[dependencies.image]
version = "0.15.0"
optional = true

[dependencies.sdl2_mt]
version = "0.2.0"
optional = true

[lib]
name = "dataplotlib"
path = "./src/lib.rs"
